syntax = "proto3";

import "google/protobuf/timestamp.proto";

package post;

service Post {
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
    rpc GetPost(GetPostRequest) returns (SinglePost);
    rpc CreatePost(CreatePostRequest) returns (SinglePost);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
    rpc CheckExists(CheckExistsRequest) returns (CheckExistsResponse);
    rpc GetOwner(GetOwnerRequest) returns (GetOwnerResponse);
}

message ListPostsRequest {
    int32 pageSize = 1;
    int32 pageNumber = 2;
}

message ListPostsResponse {
    repeated SinglePost posts = 1;
    int32 pageSize = 2;
    int32 pageNumber = 3;
}

message GetPostRequest {
    string uid = 1;
}

message SinglePost {
    string uid = 1;
    string userUid = 2;
    string title = 3;
    string url = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp modifiedAt = 6;
}

message CreatePostRequest {
    string title = 1;
    string url = 2;
    string userUid = 3;
}

message UpdatePostRequest {
    string uid = 1;
    string title = 2;
    string url = 3;
}

message UpdatePostResponse {

}

message DeletePostRequest {
    string uid = 1;
}

message DeletePostResponse {

}

message CheckExistsRequest {
    string uid = 1;
}

message CheckExistsResponse {
    bool exists = 1;
}

message GetOwnerRequest {
    string uid = 1;
}

message GetOwnerResponse {
    string ownerUid = 1;
}
